# osiris_open_cv_3.4

./: .dockerignore  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  LICENSE  README.md  appveyor.yml  docker-compose.yml  dockerfile
data/: process.ini  process_BufferIrisCodes.txt  process_CASIA-IrisV2 copy 2.txt  process_CASIA-IrisV2 copy.txt  process_CASIA-IrisV2.txt
data/OsirisParam/: points.txt
data/Output/: error.txt
scripts/Matching/: list_matching_intra.txt
scripts/Template/: ImageListICE.txt  configuration.ini
src/: OsiEye.cpp  OsiEye.h  OsiMain.cpp  OsiManager.cpp  OsiManager.h  OsiProcessings.cpp  OsiProcessings.h  makefile
